# CrabCraft

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/crab-assets/: Cargo.toml
crates/crab-assets/examples/: item_atlas.rs
crates/crab-assets/src/: entity.rs  gui.rs  lib.rs  model.rs
crates/crab-audio/: Cargo.toml
crates/crab-audio/examples/: decode.rs
crates/crab-audio/src/: lib.rs
crates/crab-auth/: Cargo.toml
crates/crab-auth/src/: crypt.rs  lib.rs  msa.rs  session.rs
crates/crab-core/: Cargo.toml
crates/crab-core/src/: command.rs  lib.rs  protocol.rs  replay.rs  screen.rs  state.rs  wire.rs
crates/crab-net/: Cargo.toml
crates/crab-net/src/: connection.rs  crypt.rs  error.rs  frame.rs  lib.rs
crates/crab-physics/: Cargo.toml
crates/crab-physics/src/: lib.rs
crates/crab-protocol/: Cargo.toml
crates/crab-protocol/src/: error.rs  io.rs  lib.rs  nbt.rs  packet.rs
crates/crab-protocol/src/versions/: mod.rs
crates/crab-protocol/src/versions/v1_20_1/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/crab-protocol/src/versions/v1_20_2/: configuration.rs  login.rs  mod.rs  play.rs
crates/crab-protocol/src/versions/v1_20_3/: configuration.rs  mod.rs  play.rs
crates/crab-protocol/src/versions/v1_20_5/: configuration.rs  mod.rs  play.rs
crates/crab-protocol/src/versions/v1_21/: mod.rs  play.rs
crates/crab-protocol/src/versions/v1_21_2/: configuration.rs  mod.rs  play.rs
crates/crab-protocol/src/versions/v1_21_4/: mod.rs  play.rs
crates/crab-protocol/src/versions/v1_21_5/: mod.rs  play.rs
crates/crab-registry/: Cargo.toml
crates/crab-registry/scripts/: generate_blocks.py  generate_collision.py  generate_entities.py  generate_items.py
crates/crab-registry/src/: blocks_1_20_1.rs  blocks_1_20_2.rs  blocks_1_20_3.rs  blocks_1_20_5.rs  blocks_1_21.rs  blocks_1_21_3.rs  blocks_1_21_4.rs  blocks_1_21_5.rs  collision_generated.rs  entities_1_20_1.rs  entities_1_20_3.rs  entities_1_20_5.rs  entities_1_21_3.rs  entities_1_21_4.rs  entities_1_21_5.rs  items_1_20_1.rs  items_1_20_3.rs  items_1_20_5.rs  items_1_21.rs  items_1_21_3.rs  items_1_21_4.rs  items_1_21_5.rs  lib.rs
crates/crab-render/: Cargo.toml
crates/crab-render/examples/: crack.rs  dropped.rs  entities.rs  entity.rs  hud.rs  inventory.rs  menu.rs  offscreen.rs  player.rs  shapes.rs
crates/crab-render/src/: camera.rs  hud.rs  lib.rs  mesh.rs  renderer.rs  shader.wgsl
crates/crab-world/: Cargo.toml
crates/crab-world/src/: chunk.rs  lib.rs  world.rs
crates/crabcraft/: Cargo.toml
crates/crabcraft-launcher/: Cargo.toml
crates/crabcraft-launcher/src/: main.rs
crates/crabcraft/src/: client.rs  main.rs  resource.rs  window.rs
docs/: ARCHITECTURE.md  ASSETS.md  EXTENDING.md  PROTOCOL.md
