[package]
name = "crab-assets"
description = "Loads Minecraft block models/textures from a client jar and stitches a texture atlas."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crab-registry.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
