[package]
name = "crab-audio"
description = "Loads Minecraft sounds from the launcher asset store and plays them via rodio."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde_json = { version = "1", features = ["preserve_order"] }
rodio = "0.22"
