[package]
name = "crab-auth"
description = "Minecraft session crypto (server hash, RSA) and Microsoft account login."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
sha1 = "0.10"
rsa = "0.9"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
