[package]
name = "crabcraft"
description = "Crabcraft client binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crabcraft"
path = "src/main.rs"

[dependencies]
crab-protocol.workspace = true
crab-net.workspace = true
crab-world.workspace = true
crab-registry.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
