[package]
name = "crabcraft"
description = "Crabcraft client binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crabcraft"
path = "src/main.rs"

[dependencies]
crab-protocol.workspace = true
crab-net.workspace = true
crab-world.workspace = true
crab-render.workspace = true
crab-auth.workspace = true
crab-physics.workspace = true
crab-assets.workspace = true
crab-registry.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu = "22"
winit = "0.30"
glam = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
