[package]
name = "crabcraft"
description = "Crabcraft client binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crabcraft"
path = "src/main.rs"

[dependencies]
crab-protocol.workspace = true
crab-net.workspace = true
crab-world.workspace = true
crab-render.workspace = true
crab-auth.workspace = true
crab-physics.workspace = true
crab-assets.workspace = true
crab-registry.workspace = true
crab-audio.workspace = true
crab-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu = "22"
winit = "0.30"
glam = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha1 = "0.10"
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid.workspace = true
md5 = "0.7"
